<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="15dp"
    android:background="@color/colorPrimary"
    android:layout_marginLeft="15dp"
    android:padding="15dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_verification_email"
        android:textSize="21sp"
        android:textColor="@color/Black"
        android:id="@+id/dialogTitle"/>

    <EditText
        android:id="@+id/confirm_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/Black"

        android:textSize="20sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/Black"
        android:textSize="20sp"
        android:autofillHints="" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/Black"
            android:text="@string/cancel"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/dialogCancel"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/Black"
            android:text="@string/confirm"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/dialogConfirm"/>

    </RelativeLayout>

</LinearLayout>