<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="4dp"
        card_view:cardMaxElevation="2dp"
        card_view:cardElevation="1dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/card_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/txtType"
                android:layout_width="204dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/txtName" />

            <TextView
                android:id="@+id/profile_image"
                android:layout_width="142dp"
                android:layout_height="39dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/type"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#00BCD4"
                android:textStyle="bold|italic"
                card_view:layout_constraintEnd_toStartOf="@+id/txtType"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/txtDisplayName" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="381dp"
                android:layout_height="167dp"
                android:contentDescription="@string/todo"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txtDisplayName"
                android:layout_width="142dp"
                android:layout_height="39dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/name"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#00BCD4"
                android:textStyle="bold|italic"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="204dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="Textview"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@+id/txtDisplayName"
                card_view:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="357dp"
                android:layout_height="350dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/txtDisplayDescription" />

            <TextView
                android:id="@+id/txtDisplayDescription"
                android:layout_width="363dp"
                android:layout_height="46dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/description"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#00BCD4"
                android:textStyle="bold|italic"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.582"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/txtType" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>